# notes-cli

./: Cargo.toml  LICENSE
.github/workflows/: ci.yml  deploy.yml
src/: commands.rs  dirs.rs  main.rs  notes.rs
src/commands/: new.rs
