[package]
name = "notes-cli"
version = "0.1.0"
authors = ["Jheyson Saavedra <jheysonsaav@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "notes"
path = "src/main.rs"

[dependencies]
rustyline = "8.0.0"
clap = "2.33.3"
colored = "2.0.0"
serde = { version = "1.0.125", features = ["derive"] }
directories = "3.0.1"
serde_yaml = "0.8.17"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
